# hackage-query

./: HackageCollision.hs  LICENSE  hackage-collision.cabal  hackage-query.cabal  hackage-query.hs
