Name:                hackage-query
Version:             0.1
Synopsis:            Query for interesting information about Hackage
-- Description:         
Homepage:            http://github.com/ezyang/hackage-collision
License:             BSD3
License-file:        LICENSE
Author:              Edward Z. Yang
Maintainer:          ezyang@mit.edu
Copyright:           (C) Edward Z. Yang 2010
Category:            Distribution
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2

Executable hackage-query
    Main-is:             hackage-query.hs
    Build-depends:       base >= 4.2.0,
                         Cabal >= 1.8.0,
                         haskell-src-exts >= 1.9.0,
                         directory >= 1.0.0,
                         filepath >= 1.1.0,
                         cmdargs >= 0.1,
                         utility-ht >= 0.0.5,
                         containers >= 0.2.0,
                         mtl >= 1.1.0,
                         MaybeT >= 0.1.2,
                         strict >= 0.3.2
    Ghc-options:         -Wall

  -- Modules not exported by this package.
  -- Other-modules:       

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

